--- a/public/index.html
+++ b/public/index.html
@@ -26,51 +26,38 @@
         header {
             border-bottom: solid 2px white;
         }
+
+        textarea, input {
+            width: 100%;
+            background-color: white
+        }
+
+        input {
+            height: 36px;
+            font-size: 20px;
+        }
+
+        textarea {
+            height: 200px;
+            font-size: 18px;
+        }
     </style>
     <header class='header bg-dark text-center text-white'>
         <h1>Mongo Web Scraper</h1>
     </header>
     <div class='container'>
         <div class='row'>
-            <div class='col-2'>
+            <div class='col-3'>
             </div>
-            <div class='col-8'>
+            <div class='col-6'>
                 <div id='articles'>
+                    <div id='usercomment'></div>
                 </div>
+            </div>
+            <div class='col-3'>
                 <div id='comments'>
                 </div>
-            </div>
-            <div class='col-2'>
             </div>
         </div>
-        <!-- <div class='row'>
-            <div class='col-4'>
-            </div>
-            <div class='col-4'>
-                <form class='mt-3'>
-                    <div class='form-group'>
-                        <label for='name'>Name</label>
-                        <input type='text' class='form-control' id='name' placeholder='Enter Name'>
-                    </div>
-                    <div class='form-group'>
-                        <label for='text'>Comment</label>
-                        <textarea class='form-control' id='comment' placeholder='Enter Comment...' rows='4'></textarea>
-                    </div>
-                    <button type='submit' class='btn btn-primary w-100'>Post</button>
-                </form>
-            </div>
-            <div class='col-4'>
-            </div>
-        </div> -->
-        <!-- <div class='row'>
-            <div class='col-4'>
-            </div>
-            <div class='col-4'>
-                <div id='comments'>
-                </div>
-            </div>
-            <div class='col-4'>
-            </div>
-        </div> -->
 </body>
 </html>
