--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     </style>
     <header class='header bg-dark text-center text-white'>
         <h1>Mongo Web Scraper</h1>
+        <button class='btn btn-primary' id='scrape-article'>Find New Articles</button>
     </header>
     <div class='container'>
         <div class='row'>
@@ -51,7 +52,7 @@
             </div>
             <div class='col-6'>
                 <div id='articles'>
-                    <div id='usercomment'></div>
+                    <div id='usercomments'></div>
                 </div>
             </div>
             <div class='col-3'>
