--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body {
-            background-image: linear-gradient(to right, rgb(13, 91, 236), rgb(109, 99, 99), rgb(94, 94, 233))
+            background-image: repeating-linear-gradient(to right, rgb(13, 91, 236), rgb(109, 99, 99), rgb(94, 94, 233) 10%);
         }
 
         .white {
@@ -44,7 +44,7 @@
         }
 
         #articles {
-            background: rgb(228, 227, 227, 0.3);
+            background: rgb(228, 227, 227, 0.6);
         }
 
         .text-black {
