--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
         .text-black {
             border-bottom: solid blue 2px;
         }
+
+        #comments {
+            color: white;
+        }
         
     </style>
     <header class='header bg-dark text-center text-white'>
