--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
         #articles {
             background: rgb(228, 227, 227, 0.6);
+            margin-bottom: 20px;
+            border: solid rgb(219, 215, 215, 0.4) 3px;
         }
 
         .text-black {
@@ -53,6 +55,10 @@
 
         #comments {
             color: white;
+        }
+
+        #scrape-article {
+            margin-bottom: 10px;
         }
         
     </style>
