--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
         #scrape-article {
             margin-bottom: 10px;
         }
+
+        .show-comment {
+            color: rgb(49, 45, 45)
+        }
         
     </style>
     <header class='header bg-dark text-center text-white'>
